# generic-str

./: .gitignore  Cargo.toml  README.md  docs
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/cursed_strings/: all.html  fn.from_utf8.html  fn.from_utf8_mut.html  fn.from_utf8_unchecked.html  fn.from_utf8_unchecked_mut.html  index.html  sidebar-items.js  struct.FromUtf8Error.html  struct.StringBase.html  type.ArrayString.html  type.ArrayString32.html  type.OwnedString.html  type.String.html  type.String32.html  type.StringSlice.html  type.str.html  type.str32.html
docs/generic_str/: all.html  fn.from_utf8.html  fn.from_utf8_mut.html  fn.from_utf8_unchecked.html  fn.from_utf8_unchecked_mut.html  index.html  sidebar-items.js  struct.FromUtf8Error.html  struct.StringBase.html  type.ArrayString.html  type.ArrayString32.html  type.OwnedString.html  type.String.html  type.String32.html  type.StringSlice.html  type.str.html  type.str32.html
docs/generic_vec/: all.html  index.html  macro.ArrayVec.html  macro.InitArrayVec!.html  macro.InitArrayVec.html  macro.gvec!.html  macro.gvec.html  macro.save_spare!.html  macro.save_spare.html  macro.uninit_array.html  sidebar-items.js  struct.GenericVec.html  type.ArrayVec.html  type.HeapVec.html  type.InitArrayVec.html  type.InitSliceVec.html  type.SliceVec.html  type.TypeVec.html  (+1 more)
src/: chars.rs  convert.rs  lib.rs  owned_utf32.rs  owned_utf8.rs  slice_index.rs  slice_utf32.rs  slice_utf32_index.rs  slice_utf8.rs  slice_utf8_index.rs  string_base.rs  traits.rs  traits_utf32.rs  traits_utf8.rs  validation.rs
(+136 files in other folders)
