[package]
name = "cursed_strings"
version = "0.1.1"
edition = "2018"
author = "Conrad Ludgate <conradludgate@gmail.com"
license = "MIT"
description = "Annoyed that Rust has two string types? Well it doesn't any more"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
