[package]
name = "cursed_strings"
version = "0.2.0"
edition = "2018"
author = "Conrad Ludgate <conradludgate@gmail.com"
license = "MIT"
description = "Annoyed that Rust has two string types? Well it doesn't any more"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-vec = { version = "0.1.3", features = ["nightly", "alloc"], git = "https://github.com/conradludgate/generic-vec" }
